# supacrawl

./: .env.example  .envrc  .gitignore  .pre-commit-config.yaml  AUDIT_FIRECRAWL_REPLACEMENT.md  BUG_REPORT_CRAWL4AI_SPA.md  CHANGELOG.md  CLI_SIMPLIFICATION_PLAN.md  DOCUMENTATION_UPDATES.md  Dockerfile.mcp  FIRECRAWL_PARITY_PLAN.md  LICENSE  README.md  ROADMAP.md  debug_sharesight.py  docker-compose.mcp.yaml  environment.yaml  llms.txt  pyproject.toml  test_spa_delay.py
.claude/: CLAUDE.md  SKILLS-VS-AGENTS.md
.claude/agents/: README.md  master
.claude/commands/: debug-scraping.md  improve-supacrawl.md
.claude/hooks/: master
.claude/prompts/: orchestration-firecrawl-parity.md  phase1-core-infrastructure.md  phase2-map-command.md  phase3-scrape-command.md  phase4-crawl-command.md  phase5-batch-operations.md  phase6-crawl4ai-cleanup.md  phase7-e2e-testing.md  phase8-marie-kondo-cleanup.md  plan-unified-cli.md
.claude/rules/: 00-project-foundations.md  20-cli-patterns.md  20-development-environment.md  50-scraper-provider-patterns.md  70-error-handling.md  71-testing-patterns.md  73-verification.md  dev-platform  python
.claude/scripts/: sync-rules.py
.claude/skills/: rule-cli-dev.json  rule-corpus-dev.json  rule-scraper-dev.json
.cursor/commands/: git-release-web-scraper.md  master
.cursor/rules/: 00-project-foundations-supacrawl.mdc  00-project-foundations-web-scraper.mdc  20-cli-patterns-supacrawl.mdc  20-cli-patterns-web-scraper.mdc  20-development-environment-supacrawl.mdc  20-development-environment-web-scraper.mdc  50-corpus-layout-patterns-supacrawl.mdc  50-corpus-layout-patterns-web-scraper.mdc  50-scraper-provider-patterns-supacrawl.mdc  50-scraper-provider-patterns-web-scraper.mdc  50-site-config-patterns-supacrawl.mdc  50-site-config-patterns-web-scraper.mdc  70-error-handling-supacrawl.mdc  70-error-handling-web-scraper.mdc  71-testing-patterns-supacrawl.mdc  71-testing-patterns-web-scraper.mdc  73-verification-supacrawl.mdc  73-verification-web-scraper.mdc  master
.github/prompts/: issue-classification.prompt.yaml
.github/workflows/: auto-label-issues.yaml  auto-label-issues.yml  ci.yaml  publish.yaml
audit_artifacts/: AUDIT_SUMMARY.md  phase0_claims.md  repo_inventory.json
audit_artifacts/parity/: parity_comparison.md
docs/: PR0_BASELINE_HARNESS.md  README.md  REFACTOR_PLAN.md  api-reference.md  architecture-firecrawl-parity.md  cli-reference.md  configuration.md  master  plan-map-firecrawl-parity.md
docs/30-architecture/: corpus-layout-supacrawl.md  corpus-layout-web-scraper.md  data-flow-llm.md  site-configuration-supacrawl.md  site-configuration-web-scraper.md  snapshot-contract.md
docs/40-usage/: IMPLEMENTATION_VALIDATION.md  REMOVE_MARKDOWN_FIXES.md  USAGE_GUIDE.md  cli-usage-supacrawl.md  cli-usage-web-scraper.md  crawl4ai-quality-best-practices.md  creating-site-configs-supacrawl.md  creating-site-configs-web-scraper.md  markdown-fixes.md
docs/70-reliability/: error-handling-supacrawl.md  error-handling-web-scraper.md  retry-logic-supacrawl.md  retry-logic-web-scraper.md  testing-supacrawl.md  testing-web-scraper.md
docs/archive/: 020-feat-crawl-resumption.md  027-execution-checklist.md  027-refactor-two-layer-model.md  workflow-analysis-and-usability-improvements.md
docs/development/: data-flow-llm.md  error-handling.md  improvement-lessons.md  retry-logic.md  testing.md
docs/todo/: 025-feat-extraction-strategies.md  026-feat-export-integrations.md  README.md
schemas/: snapshot-manifest.schema.json
scripts/: benchmark_llm_content.py
sites/: audit-test.yaml  benchmark.yaml  debug-test1-no-filter.yaml  debug-test2-no-fixes.yaml  debug-test3-both-disabled.yaml  example_site.yaml  meta-docs.yaml  meta-overview.yaml  meta.yaml  sharesight-api-manual.yaml  sharesight-api.yaml  template.yaml
src/supacrawl/: __init__.py  __main__.py  cache.py  cli.py  config.py  exceptions.py  init.py  map.py  map_io.py  models.py  quality.py  remote_sink.py  telemetry.py  utils.py
tests/: conftest.py  test_actions.py  test_baseline_quality.py  test_batch.py  test_benchmark_corpus.py  test_benchmark_metrics.py  test_benchmark_pdf_concurrency.py  test_benchmark_reference.py  test_benchmark_runner.py  test_benchmark_store.py  test_boilerplate.py  test_branding.py  test_browser.py  test_cache.py  test_change_tracking.py  test_chunker.py  test_cli.py  test_cli_commands.py  test_config.py  test_content_filter.py  test_converter.py  test_corpus_and_chunker.py  test_corpus_writer.py  test_crawl4ai_quality.py  test_crawl_change_tracking.py  test_crawl_from_map.py  test_crawl_politeness.py  test_crawl_service.py  test_device_emulation.py  test_disclosure_expansion.py  test_error_handling.py  test_escalation.py  test_expect_gate.py  test_guardrails.py  test_headers.py  test_headless_propagation.py  test_health_search_config.py  test_health_search_probe.py  test_http_first.py  test_iframe_expansion.py  (+39 more)
tests/e2e/: __init__.py  test_baseline_quality.py  test_crawl4ai_quality.py  test_crawl_from_map.py  test_link_preservation.py  test_manifest_metadata.py  test_manifest_schema_validation.py  test_output_formats_integrity.py  test_preset_parity.py
tests/fixtures/: .gitkeep  baseline_metrics.json
tests/helpers/: quality_metrics.py  server.py
tests/integration/: __init__.py  test_auto_resume.py  test_chunker.py  test_chunks_flag.py  test_cli.py  test_corpus_and_chunker.py  test_corpus_writer.py  test_init_command.py  test_list_snapshots.py  test_loader_optional_id.py  test_map_command.py  test_phase9_output.py  test_politeness.py  test_providers.py
tests/test_api/: conftest.py  test_auth.py  test_batch.py  test_control_plane.py  test_crawl.py  test_extract.py  test_jobs.py  test_map.py  test_native.py  test_scrape.py  test_search.py  test_translation.py
tests/test_mcp/: conftest.py  (+6 more)
web_scraper/: __init__.py  __main__.py  batch_service.py  browser.py  cli.py  config.py  converter.py  crawl_service.py  exceptions.py  init.py  llm_content.py  map.py  map_io.py  map_service.py  models.py  progress.py  rate_limit.py  scrape_service.py  utils.py
(+266 files in other folders)
