 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"

[project]
name = "supacrawl"
version = "2026.1.7"
 description = "Zero-infrastructure CLI web scraper with LLM extraction."
 readme = "README.md"
 requires-python = ">=3.14"
 license = { text = "MIT" }
authors = [
    {name = "poodle64"}
]
keywords = ["scraper", "crawler", "web", "llm", "markdown", "playwright"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
  "aiofiles>=25.1.0",
  "beautifulsoup4>=4.12.3",
  "click>=8.1.7",
  "httpx>=0.28.1",
  "markdownify>=1.2.2",
  "ollama>=0.1.0",
  "playwright>=1.49.0",
  "pydantic>=2.9.0",
  "pyyaml>=6.0.1",
  "rich>=14.2.0",
]

[project.urls]
Homepage = "https://github.com/poodle64/supacrawl"
Repository = "https://github.com/poodle64/supacrawl"

[project.optional-dependencies]
dev = [
  "mypy>=1.11.0",
  "pre-commit>=4.5.1",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "pytest-xdist>=3.5.0",
  "ruff>=0.6.2",
  "types-aiofiles>=25.1.0",
  "types-PyYAML>=6.0.1",
]
stealth = [
  "patchright>=1.56.0",
]
captcha = [
  "2captcha-python>=2.0.2",
]

[project.scripts]
supacrawl = "supacrawl.cli:app"

[tool.pytest.ini_options]
markers = [
    "unit: Pure logic tests with no I/O, network, or browser",
    "integration: Filesystem-heavy tests, may use local HTTP server and Playwright",
    "e2e: End-to-end tests with live network and Playwright",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore:The 'text' argument to find\\(\\)-type methods is deprecated:DeprecationWarning:bs4.element",
]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.mypy]
python_version = "3.14"

[[tool.mypy.overrides]]
module = "twocaptcha.*"
ignore_missing_imports = true

[tool.hatch.build.targets.sdist]
exclude = [
  "/.claude",
  "/.envrc",
  "/.gitattributes",
  "/.pre-commit-config.yaml",
  "/docs",
  "/environment.yaml",
  "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/supacrawl"]
