 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"

[project]
name = "supacrawl"
version = "2026.3.1"
 description = "Zero-infrastructure CLI web scraper with LLM extraction."
 readme = "README.md"
 requires-python = ">=3.12"
 license = { text = "MIT" }
authors = [
    {name = "poodle64"}
]
keywords = ["scraper", "crawler", "web", "llm", "markdown", "playwright"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
  "aiofiles>=25.1.0",
  "beautifulsoup4>=4.14.3",
  "click>=8.3.1",
  "httpx>=0.28.1",
  "markdownify>=1.2.2",
  "ollama>=0.6.1",
  "pdfplumber>=0.11.9",
  "playwright>=1.40.0,<2.0.0",  # Keep >=1.40.0 for NixOS — see #79, #104
  "pydantic>=2.12.5",
  "pyyaml>=6.0.3",
  "rich>=14.3.3",
]

[project.urls]
Homepage = "https://github.com/poodle64/supacrawl"
Repository = "https://github.com/poodle64/supacrawl"

[project.optional-dependencies]
dev = [
  "mypy>=1.19.1",
  "pre-commit>=4.5.1",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "pytest-xdist>=3.8.0",
  "ruff>=0.15.4",
  "types-aiofiles>=25.1.0.20251011",
  "types-PyYAML>=6.0.12.20250915",
]
stealth = [
  "patchright>=1.40.0",  # Keep >=1.40.0 for NixOS — see #79, #104
]
camoufox = [
  "camoufox[geoip]>=0.4.11",
]
captcha = [
  "2captcha-python>=2.0.3",
]
pdf-ocr = [
  "pytesseract>=0.3.13",
  "pdf2image>=1.17.0",
]
api = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.34.0",
]
mcp = [
  "anyio>=4.12.1",
  "fastmcp>=3.1.0",
  "pydantic-settings>=2.13.1",
  "python-dotenv>=1.2.2",
  "starlette>=0.52.1",
]

[project.scripts]
supacrawl = "supacrawl.cli:app"
supacrawl-mcp = "supacrawl.mcp.server:main"

[tool.pytest.ini_options]
markers = [
    "unit: Pure logic tests with no I/O, network, or browser",
    "integration: Filesystem-heavy tests, may use local HTTP server and Playwright",
    "e2e: End-to-end tests with live network and Playwright",
    "mcp: MCP server tests (requires supacrawl[mcp])",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore:The 'text' argument to find\\(\\)-type methods is deprecated:DeprecationWarning:bs4.element",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.mypy]
python_version = "3.12"

[[tool.mypy.overrides]]
module = "twocaptcha.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "camoufox.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pdfplumber.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pytesseract.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pdf2image.*"
ignore_missing_imports = true

[tool.hatch.build.targets.sdist]
exclude = [
  "/.claude",
  "/.envrc",
  "/.gitattributes",
  "/.pre-commit-config.yaml",
  "/docs",
  "/environment.yaml",
  "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/supacrawl"]
