 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"

[project]
name = "supacrawl"
version = "2026.6.5"
 description = "Zero-infrastructure CLI web scraper with LLM extraction."
 readme = "README.md"
 requires-python = ">=3.14"
 license = { text = "MIT" }
authors = [
    {name = "poodle64"}
]
keywords = ["scraper", "crawler", "web", "llm", "markdown", "playwright"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
  "aiofiles>=25.1.0",
  "beautifulsoup4>=4.14.3",
  "click>=8.3.1",
  "httpx[brotli]>=0.28.1",
  "markdownify>=1.2.2",
  "ollama>=0.6.1",
  "pdfplumber>=0.11.9",
  "playwright>=1.40.0,<2.0.0",  # Keep >=1.40.0 for NixOS — see #79, #104
  "pydantic>=2.12.5",
  "pyyaml>=6.0.3",
  "rich>=14.3.3",
  "tomli-w>=1.2.0",
]

[project.urls]
Homepage = "https://github.com/poodle64/supacrawl"
Repository = "https://github.com/poodle64/supacrawl"

[dependency-groups]
# Local-path override for mcp-common and api-common, kept as its own group so
# their uv.sources entries below can be group-scoped (PEP 735). A group-scoped
# source is local-only config that a consumer resolving `supacrawl[mcp]` as a
# path dependency never sees, avoiding uv "conflicting URLs" resolution errors
# in consuming workspaces (see ragify#179 for the failure this prevents). uv
# requires a group-scoped source's package to be listed directly in the group
# it is scoped to, so api-common (pulled in transitively via mcp-common) is
# listed here explicitly even though nothing in this file depends on it
# directly.
mcp-common-dev = [
  "mcp-common",
  "api-common",
]
# MCP surface deps, separated from dev so CI (no sibling checkouts) can
# exclude exactly this slice and still lint/type/test everything else.
mcp-dev = [
  "supacrawl[mcp]",
  {include-group = "mcp-common-dev"},
]
dev = [
  "supacrawl[stealth,camoufox,captcha,pdf-ocr,api,readability]",
  "mypy>=1.19.1",
  "pre-commit>=4.5.1",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "pytest-xdist>=3.8.0",
  "ruff>=0.15.4",
  "types-aiofiles>=25.1.0.20251011",
  "types-PyYAML>=6.0.12.20250915",
]

[project.optional-dependencies]
stealth = [
  "patchright>=1.40.0",  # Keep >=1.40.0 for NixOS — see #79, #104
]
camoufox = [
  "camoufox[geoip]>=0.4.11",
]
captcha = [
  "2captcha-python>=2.0.3",
]
pdf-ocr = [
  "pytesseract>=0.3.13",
  "pdf2image>=1.17.0",
]
api = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.34.0",
]
readability = [
  "readability-lxml>=0.8",
  "rank-bm25>=0.2",
]
mcp = [
  # Shared MCP framework (BaseMCPServer, exceptions, config, logging). The MCP
  # layer consumes the real mcp_common — it does NOT vendor a copy (a vendored
  # fork silently drifts from the shared package; see the de-vendoring in this
  # repo's history). mcp-common transitively pulls api-common (correlation),
  # fastmcp, pydantic, and pydantic-settings.
  "mcp-common",
  "anyio>=4.12.1",
  "fastmcp>=3.1.0",
  "pydantic-settings>=2.13.1",
  "python-dotenv>=1.2.2",
  "starlette>=0.52.1",
]

[project.scripts]
supacrawl = "supacrawl.cli:app"
supacrawl-mcp = "supacrawl.mcp.server:main"

[tool.pytest.ini_options]
markers = [
    "unit: Pure logic tests with no I/O, network, or browser",
    "integration: Filesystem-heavy tests, may use local HTTP server and Playwright",
    "e2e: End-to-end tests with live network and Playwright",
    "mcp: MCP server tests (requires supacrawl[mcp])",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore:The 'text' argument to find\\(\\)-type methods is deprecated:DeprecationWarning:bs4.element",
]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.mypy]
python_version = "3.14"
plugins = ["pydantic.mypy"]
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "fpdf.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "twocaptcha.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "camoufox.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pdfplumber.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pytesseract.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pdf2image.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "asyncssh.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "readability.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "rank_bm25.*"
ignore_missing_imports = true

# The MCP-surface deps are absent on CI (no sibling checkouts; see the
# mcp-dev dependency group). Locally they are installed and fully typed.
[[tool.mypy.overrides]]
module = "fastmcp.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mcp.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mcp_common.*"
ignore_missing_imports = true

# api-common ships its own py.typed marker and resolves fine at runtime (it is
# a genuine editable-path sibling, see [tool.uv.sources]), but two separate
# reasons still land it here: (1) it is absent on CI along with the rest of
# the mcp-dev group, and (2) even where it IS installed, mypy cannot
# statically follow Hatchling's PEP 660 finder-based editable-install .pth
# (unlike mcp-common's plain directory-path .pth, which mypy resolves without
# issue) — a known mypy/Hatchling gap, not a real missing-stub problem.
[[tool.mypy.overrides]]
module = "api_common.*"
ignore_missing_imports = true

# pydantic-settings is declared only in the `mcp` extra here (unlike
# redactyl, where it is already pulled in by the always-on `api` extra) — so
# it is absent on CI for the same mcp-dev reason above. python-dotenv needs
# no override: it resolves fine on CI regardless, as a genuine transitive
# dependency of uvicorn[standard] (in the always-on `api` extra).
[[tool.mypy.overrides]]
module = "pydantic_settings.*"
ignore_missing_imports = true

[tool.uv]
environments = ["sys_platform == 'darwin'", "sys_platform == 'linux'"]

# dev only: `uv run` performs an implicit default-groups sync wherever it
# executes, including CI runners and consumer checkouts where the editable
# mcp-dev/mcp-common-dev siblings do not exist on disk. Local dev installs
# every group via .envrc (`uv sync --all-groups`); uv run never prunes the
# extra groups it finds already installed.
default-groups = ["dev"]

# Sibling repos installed editable from disk for local/dev resolution; the
# path source overrides the PyPI requirement for that distribution. mcp-common
# and api-common are not published to an index, so the MCP extra resolves them
# from the sibling checkouts (the household no-vendoring pattern — same as
# ragify/redactyl/milton). mcp-common lives INSIDE the mcp-servers repo, so its
# source is scoped to the mcp-common-dev group (see the group comment above).
# api-common enters the graph only transitively via mcp-common (mcp-common
# declares it as a runtime dependency); its source is scoped to the same group
# for the same reason — an ungrouped source is local-only config a consumer
# resolving supacrawl[mcp] as a path dependency would still see, hitting uv's
# "conflicting URLs" resolution error (see ragify#179).
[tool.uv.sources]
mcp-common = { path = "../mcp-servers/mcp-common", editable = true, group = "mcp-common-dev" }
api-common = { path = "../api-clients/api-common", editable = true, group = "mcp-common-dev" }

[tool.hatch.build.targets.sdist]
exclude = [
  "/.claude",
  "/.envrc",
  "/.gitattributes",
  "/.pre-commit-config.yaml",
  "/docs",
  "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/supacrawl"]
